style(front): organization of directories and updating of files

--- a/src/styles/header/header-featured-message.css
+++ b/src/styles/header/header-featured-message.css
@@ -2,6 +2,8 @@
     width: 100%;
     max-width: 1150px;
     margin: 0 auto;
+    position: relative;
+    z-index: 1; /* Valor baixo para ficar atrás da navbar */
 }
 
 .featured-message-content {
