--- a/src/styles/aside/aside-spotify-card.css
+++ b/src/styles/aside/aside-spotify-card.css
@@ -2,6 +2,7 @@
     font-family: Montserrat, Arial, sans-serif;
     width: 100%;
     max-width: 350px;
+    height: 550px;
     background-color: #c1defc;
     border-radius: 12px;
     overflow: hidden;
@@ -81,14 +82,21 @@
     }
 
     .spotify-header {
+        margin-top: 0.5rem;
         padding: 1rem;
     }
 
     .spotify-title {
-        font-size: 1.5rem;
+        font-size: 2rem;
+    }
+
+    .spotify-subtitle {
+        margin-top: 0.8rem;
+        font-size: 1rem;
     }
 
     .spotify-brand {
-        font-size: 2rem;
+        margin-top: 0.3rem;
+        font-size: 2.8rem;
     }
 }
