--- a/src/styles/header/header-card-address-section.css
+++ b/src/styles/header/header-card-address-section.css
@@ -9,6 +9,7 @@
 .info-container {
     display: flex;
     flex-direction: row;
+    align-items: center;
     justify-content: space-between;
     width: 1100px;
     max-width: 100%;
