--- a/src/styles/footer/footer-section.css
+++ b/src/styles/footer/footer-section.css
@@ -1,6 +1,6 @@
 .footer-container {
     font-family: Montserrat, Arial, sans-serif;
-    background-color: #ffffff;
+    background-color: var(--color-white);
     padding: 20px;
     text-align: center;
     display: flex;
@@ -31,15 +31,16 @@
 
 .footer-address-item {
     font-size: 1.2rem;
-    color: #4B4B4B;
+    color: var(--color-gray-800);
     margin-bottom: 2rem;
 }
 
 .footer-contact span {
     font-weight: bold;
-    color: #1976d2;
+    color: var(--color-primary);
 }
 
+/* Style Responsivo */
 @media (max-width: 800px) {
     .footer-container {
         height: auto;
