--- a/src/styles/header/header-card-address-section.css
+++ b/src/styles/header/header-card-address-section.css
@@ -20,14 +20,14 @@
     gap: 2rem;
     border: 1px solid none;
     border-radius: 12px;
-    box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.08);
-    background-color: #ffffff;
+    box-shadow: 0px 8px 10px var(--color-shadow-light);
+    background-color: var(--color-white);
     box-sizing: border-box; /* Garante que o padding não afete a largura total */
 }
 
 .separator-vertical {
     width: 1px;
-    background-color: #E0E0E0;
+    background-color: var(--color-separator);
     margin: 1rem 0;
     height: 80px;
 }
@@ -40,8 +40,8 @@
 
 .address-item h4 {
     font-size: 1rem;
-    font-weight: 350;
-    color: var(--color-dark-blue);
+    font-weight: 400;
+    color: var(--color-brand-dark-blue);
     margin-bottom: 5.5px;
 }
 
