--- a/src/pages/contribua/contribua.css
+++ b/src/pages/contribua/contribua.css
@@ -31,7 +31,7 @@
     flex-direction: column;
     padding: 3rem 2rem;
     gap: 2.5rem;
-    background-color: var(--color-gray-100);
+    background-color: var(--color-off-white);
     max-width: 1200px;
     margin: 2rem auto;
     border-radius: 10px;
