--- a/src/pages/sobre-nos/Nossa-visao/nossa-visao.css
+++ b/src/pages/sobre-nos/Nossa-visao/nossa-visao.css
@@ -46,7 +46,7 @@
 }
 
 .nossa-visao-content {
-    background-color: var(--color-white);
+    background-color: var(--color-off-white);
     border-radius: 10px;
     max-width: 1200px;
     width: 100%;
