--- a/src/pages/mensagens/cultos/cultos.css
+++ b/src/pages/mensagens/cultos/cultos.css
@@ -31,7 +31,7 @@
     flex-direction: column;
     padding: 3rem 2rem;
     gap: 2.5rem;
-    background-color: var(--color-gray-100);
+    background-color: var(--color-off-white);
     min-height: 80vh;
     max-width: 1200px;
     margin: 2rem auto;
